--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>My Website</title>
+    <title>Dr B Website</title>
   </head>
   <body>
 <h1>Welcome to my Web Portfolio!</h1>
-    <p>This is the place where I show off and explain my amazing CS projects!! 
+    <p>This is <b>the</b> place where I show off and explain my <it>amazing</it> CS projects!! 
       Get excited, because I am an amazing programmer and you definitely want to hire me :)</p>
     
   </body>
