--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <h1>Welcome to my Web Portfolio!</h1>
     <p>This is <b>the</b> place where I show off and explain my <it>amazing</it> CS projects!! 
       Get excited, because I am an amazing programmer and you definitely want to hire me :)</p>
-    <img src="formula.png"/>
+    <img src="formula.png" alt="couldn't find the file"/>
   </body>
 </html>
